tests/fsgroup/allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-fsgroup-allowed
  labels:
    app: nginx-users
spec:
  securityContext:
    fsGroup: 150
  containers:
    - name: nginx
      image: nginx
