tests/fsgroup/gatekeeper.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: psp-pods-allowed-fsgroup-ranges
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    fsGroup:
      rule: MustRunAs
      ranges:
        - min: 100
          max: 200
