tests/fsgroup/kubewarden.yaml
apiVersion: policies.kubewarden.io/v1alpha2
kind: ClusterAdmissionPolicy
metadata:
  name: fsgroup
spec:
  module: registry://ghcr.io/kubewarden/policies/allowed-fsgroups-psp:v1.0.12
  rules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods"]
      scope: "Namespaced"
      operations:
      - CREATE
      - UPDATE
  mutating: false
  settings:
    rule: MustRunAs
    ranges:
      - min: 100
        max: 200
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kubewarden
