tests/fsgroup/kyverno.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psp-fsgroup
spec:
  validationFailureAction: Enforce
  rules:
    - name: psp-fsgroup
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: >-
          Containers must have .securityContext.fsgroup in a range
        anyPattern:
          - spec:
              securityContext:
                fsGroup: ">=100 & <=200"
          - spec:
              =(securityContext):
                =(fsGroup): ">=100 & <=200"
              containers:
                - securityContext:
                    fsGroup: ">=100 & <=200"
              =(initContainers):
                - securityContext:
                    fsGroup: ">=100 & <=200"
              =(ephemeralContainers):
                - securityContext:
                    fsGroup: ">=100 & <=200"
